fix scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   overflow-x: hidden;
 }
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: var(--off-white);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
